--- a/html/pancakes.html
+++ b/html/pancakes.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Pancakes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Pancakes</title>
     <link href="main.css" rel="stylesheet" type="text/css">
     <link href="recipe.css" rel="stylesheet" type="text/css">
     <link href="reset.css" rel="stylesheet" type="text/css">
